@@ -25,7 +25,8 @@ directives = {
       'note': 'note',
       'astuce': 'tip',
       'avertissement': 'warning',
-      'admonition': 'admonition',  # sic! Not used in this sense in rST.
+      'annonce': 'admonition',
+      'admonition': 'admonition',  # sic! kept for backwards compatibiltity
       # suggestions: annonce, avis, indication, remarque, renseignement
       # see also https://sourceforge.net/p/docutils/bugs/453/
       'encadré': 'sidebar',
