@@ -19,7 +19,7 @@ __docformat__ = 'reStructuredText'
 
 directives = {
       # language-dependent: fixed
-      'atenci\u00f3n': 'attention',
+      'atención': 'attention',
       'advertencia': 'caution',
       'code (translation required)': 'code',
       'perigo': 'danger',
@@ -29,46 +29,41 @@ directives = {
       'nota': 'note',
       'consello': 'tip',
       'aviso': 'warning',
-      'admonici\u00f3n': 'admonition',
+      'admonición': 'admonition',  # sic! advice/advisory/remark, not reprimand
       'barra lateral': 'sidebar',
-      't\u00f3pico': 'topic',
-      'bloque-li\u00f1a': 'line-block',
+      'tópico': 'topic',
+      'bloque-liña': 'line-block',
       'literal-analizado': 'parsed-literal',
-      'r\u00fabrica': 'rubric',
-      'ep\u00edgrafe': 'epigraph',
+      'rúbrica': 'rubric',
+      'epígrafe': 'epigraph',
       'realzados': 'highlights',
-      'coller-citaci\u00f3n': 'pull-quote',
+      'coller-citación': 'pull-quote',
       'compor': 'compound',
       'recipiente': 'container',
-      # 'questions': 'questions',
-      't\u00e1boa': 'table',
-      't\u00e1boa-csv': 'csv-table',
-      't\u00e1boa-listaxe': 'list-table',
-      # 'qa': 'questions',
-      # 'faq': 'questions',
+      'táboa': 'table',
+      'táboa-csv': 'csv-table',
+      'táboa-listaxe': 'list-table',
       'meta': 'meta',
       'math (translation required)': 'math',
-      # 'imagemap': 'imagemap',
       'imaxe': 'image',
       'figura': 'figure',
-      'inclu\u00edr': 'include',
+      'incluír': 'include',
       'cru': 'raw',
-      'substitu\u00edr': 'replace',
+      'substituír': 'replace',
       'unicode': 'unicode',
       'data': 'date',
       'clase': 'class',
       'regra': 'role',
       'regra-predeterminada': 'default-role',
-      't\u00edtulo': 'title',
+      'título': 'title',
       'contido': 'contents',
       'seccnum': 'sectnum',
-      'secci\u00f3n-numerar': 'sectnum',
+      'sección-numerar': 'sectnum',
       'cabeceira': 'header',
-      'p\u00e9 de p\u00e1xina': 'footer',
-      # 'footnotes': 'footnotes',
-      # 'citations': 'citations',
+      'pé de páxina': 'footer',
       'notas-destino': 'target-notes',
-      'texto restruturado-proba-directiva': 'restructuredtext-test-directive'}
+      'texto restruturado-proba-directiva': 'restructuredtext-test-directive',
+      }
 """Galician name to registered (in directives/__init__.py) directive name
 mapping."""
 
