@@ -17,25 +17,26 @@ __docformat__ = 'reStructuredText'
 
 directives = {
       # language-dependent: fixed
-      'aten\u00E7\u00E3o': 'attention',
+      'atenção': 'attention',
       'cuidado': 'caution',
       'code (translation required)': 'code',
       'perigo': 'danger',
       'erro': 'error',
-      'sugest\u00E3o': 'hint',
+      'sugestão': 'hint',
       'importante': 'important',
       'nota': 'note',
       'dica': 'tip',
       'aviso': 'warning',
-      'exorta\u00E7\u00E3o': 'admonition',
+      'advertência': 'admonition',
+      'exortação': 'admonition',  # sic! advice/advisory/remark, not reprimand
       'barra-lateral': 'sidebar',
-      't\u00F3pico': 'topic',
+      'tópico': 'topic',
       'bloco-de-linhas': 'line-block',
       'literal-interpretado': 'parsed-literal',
       'rubrica': 'rubric',
-      'ep\u00EDgrafo': 'epigraph',
+      'epígrafo': 'epigraph',
       'destaques': 'highlights',
-      'cita\u00E7\u00E3o-destacada': 'pull-quote',
+      'citação-destacada': 'pull-quote',
       'compound (translation required)': 'compound',
       'container (translation required)': 'container',
       # 'perguntas': 'questions',
@@ -49,23 +50,23 @@ directives = {
       # 'imagemap': 'imagemap',
       'imagem': 'image',
       'figura': 'figure',
-      'inclus\u00E3o': 'include',
+      'inclusão': 'include',
       'cru': 'raw',
-      'substitui\u00E7\u00E3o': 'replace',
+      'substituição': 'replace',
       'unicode': 'unicode',
       'data': 'date',
       'classe': 'class',
       'role (translation required)': 'role',
       'default-role (translation required)': 'default-role',
       'title (translation required)': 'title',
-      '\u00EDndice': 'contents',
+      'índice': 'contents',
       'numsec': 'sectnum',
-      'numera\u00E7\u00E3o-de-se\u00E7\u00F5es': 'sectnum',
+      'numeração-de-seções': 'sectnum',
       'header (translation required)': 'header',
       'footer (translation required)': 'footer',
       # 'notas-de-rorap\u00E9': 'footnotes',
       # 'cita\u00E7\u00F5es': 'citations',
-      'links-no-rodap\u00E9': 'target-notes',
+      'links-no-rodapé': 'target-notes',
       'restructuredtext-test-directive': 'restructuredtext-test-directive'}
 """Brazilian Portuguese name to registered (in directives/__init__.py)
 directive name mapping."""
