@@ -131,14 +131,14 @@ Misc
 
   __ docs/ref/transforms.html
 
-* docutils/parsers/rst/languages/
+* Remove mistranslated localizations of the "admonition" directive name in
+  Docutils 0.22 or later.
 
-  Fix mistranslated localizations of the "admonition" directive name in
-  Docutils 0.21 (or later). In Docutils, "admonition" is used as a
-  generic term for "advice"/"caveat"/"remark", not a reprimand.
-  Use the English term (or specific admonitions) instead of "aanmaning",
-  "ammonizione", "Ermahnung", "exhortacion", "formaning", "upomnienie",
-  or "vermaning" to avoid errors in future conversions.
+  Use the English term (or specific admonitions) instead of
+  "aanmaning" (nl), "admonition" (fr), "ammonizione" (it),
+  "ermahnung" (de), "exhortación" (es), "formaning" (da), "sciigo" (eo),
+  "upomnienie" (pl), "vermaning" (af), to avoid errors in future
+  conversions.
 
 .. _front end tools: docs/user/tools.html
 .. _input_encoding: docs/user/config.html#input-encoding
